--- a/styles/validator.css
+++ b/styles/validator.css
@@ -1,54 +1,74 @@
-.stamp{
+.correct-stamp{
   opacity: 1;
-  width: 600px;
-  height: 600px ;
+  width: 520px;
+  height: 520px ;
   position: absolute;
-  left: 95px;
-  bottom: -170px;
+  left: 120px;
+  bottom: -135px;
   visibility: hidden;
   z-index: -1;
+  transform: translateX(-200px);
   transform-origin: left;
 }
 
-.stamp.active{
-  transform: scale(0.35);
+.correct-stamp.active{
+  transform: scale(0.3) translateX(0px);;
+  transition: transform 0.3s;
+  visibility: visible !important;
+}
+
+.wrong-stamp{
+  opacity: 1;
+  width: 350px;
+  height: 350px ;
+  position: absolute;
+  left: 110px;
+  bottom: -50px;
+  visibility: hidden;
+  z-index: -1;
+  transform: translateX(0px) translateY(50px) ;
+  transform-origin: left;
+}
+
+.wrong-stamp.active{
+  transform: scale(0.5) translateX(0px);
   transition: transform 0.3s;
   visibility: visible !important;
 }
 
 .hand{
   opacity: 1;
-  width: 600px;
-  height: 600px ;
+  width: 400px;
+  height: 400px ;
   transform: rotate(20deg);
   position: absolute;
-  bottom: -220px;
+  bottom: -150px;
   transform-origin: left;
   visibility: hidden;
   z-index: -1;
 }
 
 .hand.active{
-  transform: scale(0.5);
+  transform: scale(0.7);
   transition: transform 0.3s;
   visibility: visible !important;
 }
 
 .thumb{
   opacity: 1;
-  width: 600px;
-  height: 600px ;
-  transform: rotate(50deg);
+  width: 400px;
+  height: 400px ;
+  transform: rotateY(180deg) rotate(70deg);
   position: absolute;
-  bottom: 100px;
-  left: 100px;
+  bottom: 50px;
+  right: 150px;
   transform-origin: bottom;
   visibility: hidden;
   z-index: -1;
 }
 
 .thumb.active{
-  transform: scale(0.4);
+  transform: rotateY(180deg) scale(0.6) rotate(10deg);
   transition: transform 0.3s;
   visibility: visible !important;
 }
